[project]
name = "amu-utilities"
version = "0.1.0"
description = "An MCP Server that helps students of AMU to retrieve information very easily."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
]
